feature(10. 4-4) : Resizing and Arranging

--- a/Config/DefaultEngine.ini
+++ b/Config/DefaultEngine.ini
@@ -1,6 +1,6 @@
 [/Script/EngineSettings.GameMapsSettings]
-GameDefaultMap=/Game/ThirdPerson/Maps/ThirdPersonMap.ThirdPersonMap
-EditorStartupMap=/Game/ThirdPerson/Maps/ThirdPersonMap.ThirdPersonMap
+GameDefaultMap=/Game/My_Env/L_StudyEnv.L_StudyEnv
+EditorStartupMap=/Game/My_Env/L_StudyEnv.L_StudyEnv
 GlobalDefaultGameMode="/Script/Study_Go_BP_04.Study_Go_BP_04GameMode"
 
 [/Script/Engine.RendererSettings]
